# monkey-interpreter

./: Cargo.toml  todo.md
benches/: eval_benchmark.rs
demo/: add.monkey  bench.monkey  parseError.monkey
src/: ast.rs  eval.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs
src/ast/: mod.rs
src/code/: make.rs  mod.rs  opcode.rs
src/compiler/: error.rs  mod.rs  symbol_table.rs
src/eval/: builtins.rs  mod.rs
src/eval/builtins/: entries.rs  first.rs  keys.rs  last.rs  len.rs  mod.rs  pop.rs  push.rs  puts.rs  range.rs  values.rs
src/lexer/: mod.rs  tokens.rs
src/object/: constants.rs  environment.rs  mod.rs
src/parser/: error.rs  mod.rs  precedence.rs  tracer.rs
src/repl/: commands.rs  error.rs  mod.rs  mode.rs
src/test/: mod.rs
src/vm/: error.rs  mod.rs
